# Computer-Graphics

./: .gitignore  README.md
00.HelloWorld/: helloWorld
01.models/: CMakeLists.txt  main.cpp
01.models/include/: Face.h
01.models/src/: Edge.cpp
02_obj/: CMakeLists.txt  main.cpp
02_obj/include/: Face.h  Obj.h
02_obj/src/: Obj.cpp
03_ply/: CMakeLists.txt  main.cpp
03_ply/include/: Edge.h  Ply.h  Vertex.h
03_ply/src/: Face.cpp  Ply.cpp
04_models/: CMakeLists.txt  main.cpp
04_models/include/: Model.h  Obj.h  Object.h  Ply.h
04_models/src/: Face.cpp  Obj.cpp  Object.cpp  Ply.cpp  Vertex.cpp
05_animation/: CMakeLists.txt  main  main.cpp
05_animation/include/: Animation.h  Vertex.h
05_animation/src/: Animation.cpp  Edge.cpp  Obj.cpp  Object.cpp  Ply.cpp  Vertex.cpp
06_glew_glfw/: main  main.cpp
06_glew_glfw/include/: Animation.h  Model.h  Object.h
06_glew_glfw/src/: Animation.cpp  Vertex.cpp
06_solar_system/: main  main.cpp
06_solar_system/html/: _animation_8h_source.html  _edge_8h.html  _edge_8h_source.html  _face_8cpp.html  _face_8h.html  _face_8h_source.html  _model_8h.html  _model_8h_source.html  _obj_8h_source.html  _object_8cpp.html  _object_8h.html  _object_8h_source.html  _open_g_l_8cpp.html  _open_g_l_8h.html  _open_g_l_8h_source.html  _ply_8h_source.html  _triangle_8cpp.html  _triangle_8h_source.html  _vertex_8cpp.html  _vertex_8h_source.html  annotated.html  class_edge-members.html  class_model-members.html  class_model.html  class_obj-members.html  class_obj.html  class_object-members.html  class_object.html  class_open_g_l-members.html  class_open_g_l.html  class_ply-members.html  class_ply.html  class_vertex-members.html  class_vertex.html  classes.html  cmake-build-debug-event-trace_2_c_make_files_23_826_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  cmake-build-debug_2_c_make_files_23_826_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  dir_425771147a913abb01144a7064727f86.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  (+13 more)
06_solar_system/include/: Animation.h  Edge.h  Face.h  Model.h  Obj.h  Object.h  OpenGL.h  Ply.h  Triangle.h  Vertex.h
06_solar_system/latex/: _animation_8cpp.tex  _animation_8h_source.tex  _edge_8cpp.tex  _edge_8h.tex  _edge_8h_source.tex  _face_8cpp.tex  _face_8h_source.tex  _model_8h.tex  _model_8h_source.tex  _obj_8h.tex  _obj_8h_source.tex  _object_8h_source.tex  _open_g_l_8h.tex  _open_g_l_8h_source.tex  _ply_8cpp.tex  _ply_8h.tex  _ply_8h_source.tex  _triangle_8cpp.tex  _triangle_8h.tex  _triangle_8h_source.tex  _vertex_8cpp.tex  _vertex_8h_source.tex  annotated.tex  class_animation.tex  class_face.tex  class_model.tex  class_obj.eps  class_obj.tex  class_object.eps  class_object.tex  class_ply.eps  class_ply.tex  class_triangle.tex  class_vertex.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  (+9 more)
06_solar_system/src/: Edge.cpp  (+8 more)
examen/: CMakeLists.txt  main  main.cpp
examen/include/: Animation.h  Edge.h  Face.h  Line.h  Ply.h  Vertex.h
examen/models/: cube2.ply
examen/src/: Animation.cpp  Edge.cpp  Face.cpp  Line.cpp  Vertex.cpp
proyecto_final/: Doxyfile  main  main.cpp
(+823 files in other folders)
